--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,14 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "Debug",
             "type": "shell",
-            "command": "msbuild",
+            "command": "cl",
             "args": [
-                "/property:GenerateFullPaths=true",
-                "/t:build",
-                "/consoleloggerparameters:NoSummary"
+                // put your options here dummy
+                // https://docs.microsoft.com/en-us/cpp/build/reference/compiler-options-listed-by-category?view=msvc-160 
+                // linker options
+                // https://docs.microsoft.com/en-us/cpp/build/reference/linker-options?view=msvc-160
             ],
             "group": {
                 "kind": "build",
