--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,26 +1,110 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Debug",
-            "type": "shell",
-            "command": "cl",
-            "args": [
-                // put your options here dummy
-                // https://docs.microsoft.com/en-us/cpp/build/reference/compiler-options-listed-by-category?view=msvc-160 
-                // linker options
-                // https://docs.microsoft.com/en-us/cpp/build/reference/linker-options?view=msvc-160
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "reveal": "silent"
-            },
-            "problemMatcher": "$msCompile"
-        }
-    ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"type": "cppbuild",
+			"label": "Tempest Win32 Debug",
+			"command": "cl.exe",
+			"args": [
+				"/JMC",
+				"/Yu\"stdafx.h\"",
+				"/ifcOutput",
+				"${fileDirname}\\Temp\\Tempest_Debug",
+				"/GS",
+				"/analyze-",
+				"/W1",
+				"/Zc:wchar_t",
+				"/I",
+				"${fileDirname}\\Lib\\Headers",
+				"/I",
+				"${fileDirname}\\Headers",
+				"/ZI",
+				"/Gm-",
+				"/Od",
+				"/Fd",
+				"Tempest",
+				"/Zc:inline",
+				"/fp:precise",
+				"/D",
+				"TEMPEST_EXPORTS",
+				"/D",
+				"_WINDLL",
+				"/D",
+				"_MBCS",
+				"/errorReport:prompt",
+				"/WX-",
+				"/Zc:forScope",
+				"/RTC1",
+				"/Gd",
+				"/Oy-",
+				"/MDd",
+				"/std:c++17",
+				"/FC",
+				"/Fa",
+				"${fileDirname}\\Temp\\Tempest_Debug",
+				"/EHsc",
+				"/nologo",
+				"/Fo",
+				"${fileDirname}\\Build\\Tempest_Debug",
+				"/Fp",
+				"${fileDirname}\\Build\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.pch",
+				"/diagnostics:column",
+				"/link",
+				"/OUT:",
+				"${fileDirname}\\Bin\\Tempest_Win32_Debug.dll",
+				"/MANIFEST",
+				"/NXCOMPAT",
+				"/PDB:",
+				"${fileDirname}\\Bin\\Tempest_Win32_Debug.pdb",
+				"/DYNAMICBASE",
+				"OpenGL32.lib",
+				"GL3W.lib",
+				"SOIL.lib",
+				"freetype.lib",
+				"OpenAL32.lib",
+				"glfw3.lib",
+				"glew32s.lib",
+				"kernel32.lib",
+				"user32.lib",
+				"gdi32.lib",
+				"winspool.lib",
+				"comdlg32.lib",
+				"advapi32.lib",
+				"shell32.lib",
+				"ole32.lib",
+				"oleaut32.lib",
+				"uuid.lib",
+				"odbc32.lib",
+				"odbccp32.lib",
+				"/IMPLIB:",
+				"${fileDirname}\\Bin\\Tempest_Win32_Debug.lib",
+				"/DEBUG:FASTLINK",
+				"/DLL",
+				"/MACHINE:X86",
+				"/INCREMENTAL",
+				"/PGD:",
+				"${fileDirname}\\Bin\\Tempest_Win32_Debug.pgd",
+				"/MANIFESTUAC:",
+				"level='asInvoker' uiAccess='false'",
+				"/ManifestFile:",
+				"${fileDirname}\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.dll.intermediate.manifest",
+				"/ERRORREPORT:PROMPT",
+				"/NOLOGO",
+				"/LIBPATH:",
+				"${fileDirname}\\Build\\Lib",
+				"/TLBID:1"
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: cl.exe"
+		}
+	]
 }
