Some work with vs code again. It's still not working, but its way closer. Now the file will run correctly, but the command is wrong. Something is up with the linker. Also, the launch.json is wrong.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,15 +14,12 @@
 				"/analyze-",
 				"/W1",
 				"/Zc:wchar_t",
-				"/I",
-				"${fileDirname}\\Lib\\Headers",
-				"/I",
-				"${fileDirname}\\Headers",
+				"/I\"${fileDirname}\\Lib\\Headers\"",
+				"/I\"${fileDirname}\\Headers\"",
 				"/ZI",
 				"/Gm-",
 				"/Od",
-				"/Fd",
-				"Tempest",
+				"/Fd\"Tempest_Win32_Debug\"",
 				"/Zc:inline",
 				"/fp:precise",
 				"/D",
@@ -40,18 +37,13 @@
 				"/MDd",
 				"/std:c++17",
 				"/FC",
-				"/Fa",
-				"${fileDirname}\\Temp\\Tempest_Debug",
+				"/Fa\"${fileDirname}\\Temp\\Tempest_Debug\"",
 				"/EHsc",
 				"/nologo",
-				"/Fo",
-				"${fileDirname}\\Build\\Tempest_Debug",
-				"/Fp",
-				"${fileDirname}\\Build\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.pch",
+				"/Fo\"${fileDirname}\\Build\\Tempest_Debug\"",
+				"/Fp\"${fileDirname}\\Build\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.pch\"",
 				"/diagnostics:column",
-				"/link",
-				"/OUT:",
-				"${fileDirname}\\Bin\\Tempest_Win32_Debug.dll",
+				"/OUT:\"${fileDirname}\\Bin\\Tempest_Win32_Debug.dll\"",
 				"/MANIFEST",
 				"/NXCOMPAT",
 				"/PDB:",
@@ -90,8 +82,7 @@
 				"${fileDirname}\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.dll.intermediate.manifest",
 				"/ERRORREPORT:PROMPT",
 				"/NOLOGO",
-				"/LIBPATH:",
-				"${fileDirname}\\Build\\Lib",
+				"/LIBPATH:\"${fileDirname}\\Build\\Lib\"",
 				"/TLBID:1"
 			],
 			"options": {
