Further work done to get vs code to work. It's still not there. In the meantime, visual studio is working now. This is a new baseline

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,7 +33,7 @@
 				"/Zc:forScope",
 				"/RTC1",
 				"/Gd",
-				"/Oy-",
+				"/Oy",
 				"/MDd",
 				"/std:c++17",
 				"/FC",
@@ -43,6 +43,7 @@
 				"/Fo\"${fileDirname}\\Build\\Tempest_Debug\"",
 				"/Fp\"${fileDirname}\\Build\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.pch\"",
 				"/diagnostics:column",
+				"${workspaceFolder}\\Implementations\\*.cpp",
 				"/OUT:\"${fileDirname}\\Bin\\Tempest_Win32_Debug.dll\"",
 				"/MANIFEST",
 				"/NXCOMPAT",
