I tried to get vs code to work for me again. This is a bust. I'm giving up.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,19 +7,21 @@
 			"command": "cl.exe",
 			"args": [
 				"/JMC",
-				"/Yu\"stdafx.h\"",
+				"/Y-",
+				"/LDd",
+				"./Implementations/*.cpp",
+				"/Zi",
 				"/ifcOutput",
-				"${fileDirname}\\Temp\\Tempest_Debug",
+				"${workspaceFolder}\\Temp\\Tempest_Debug\\",
 				"/GS",
 				"/analyze-",
 				"/W1",
 				"/Zc:wchar_t",
-				"/I\"${fileDirname}\\Lib\\Headers\"",
-				"/I\"${fileDirname}\\Headers\"",
-				"/ZI",
-				"/Gm-",
+				"/I${workspaceFolder}\\Lib\\Headers",
+				"/I${workspaceFolder}\\Headers",
 				"/Od",
-				"/Fd\"Tempest_Win32_Debug\"",
+				"/Ot",
+				"/Fd'Tempest'",
 				"/Zc:inline",
 				"/fp:precise",
 				"/D",
@@ -29,26 +31,21 @@
 				"/D",
 				"_MBCS",
 				"/errorReport:prompt",
-				"/WX-",
+				"/WX",
 				"/Zc:forScope",
 				"/RTC1",
 				"/Gd",
-				"/Oy",
-				"/MDd",
+				"/Oy-",
 				"/std:c++17",
 				"/FC",
-				"/Fa\"${fileDirname}\\Temp\\Tempest_Debug\"",
 				"/EHsc",
 				"/nologo",
-				"/Fo\"${fileDirname}\\Build\\Tempest_Debug\"",
-				"/Fp\"${fileDirname}\\Build\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.pch\"",
 				"/diagnostics:column",
-				"${workspaceFolder}\\Implementations\\*.cpp",
-				"/OUT:\"${fileDirname}\\Bin\\Tempest_Win32_Debug.dll\"",
+				"/link",
+				"/OUT:${workspaceFolder}\\Bin\\Tempest_Debug.dll",
 				"/MANIFEST",
 				"/NXCOMPAT",
-				"/PDB:",
-				"${fileDirname}\\Bin\\Tempest_Win32_Debug.pdb",
+				"/PDB:${workspaceFolder}\\Bin\\Tempest_Win32_Debug.pdb",
 				"/DYNAMICBASE",
 				"OpenGL32.lib",
 				"GL3W.lib",
@@ -69,21 +66,18 @@
 				"uuid.lib",
 				"odbc32.lib",
 				"odbccp32.lib",
-				"/IMPLIB:",
-				"${fileDirname}\\Bin\\Tempest_Win32_Debug.lib",
+				"/IMPLIB:${workspaceFolder}\\Bin\\Tempest_Win32_Debug.lib",
 				"/DEBUG:FASTLINK",
 				"/DLL",
 				"/MACHINE:X86",
 				"/INCREMENTAL",
-				"/PGD:",
-				"${fileDirname}\\Bin\\Tempest_Win32_Debug.pgd",
+				"/PGD:${workspaceFolder}\\Bin\\Tempest_Win32_Debug.pgd",
 				"/MANIFESTUAC:",
 				"level='asInvoker' uiAccess='false'",
-				"/ManifestFile:",
-				"${fileDirname}\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.dll.intermediate.manifest",
+				"/ManifestFile:${workspaceFolder}\\Temp\\Tempest_Debug\\Tempest_Win32_Debug.dll.intermediate.manifest",
 				"/ERRORREPORT:PROMPT",
 				"/NOLOGO",
-				"/LIBPATH:\"${fileDirname}\\Build\\Lib\"",
+				"/LIBPATH:${workspaceFolder}\\Lib\\",
 				"/TLBID:1"
 			],
 			"options": {
